--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 requests==2.31.0
 pandas==2.1.0
 PyGithub==2.1.1
-python-dotenv==1.0.0
+python-dotenv>=0.19.0
 tqdm==4.66.1
-openai==1.12.0
-PyYAML==6.0.1 
+openai>=1.0.0
+PyYAML>=6.0.1
+PyPDF2>=3.0.0 
