--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,50 @@ ENV/
 *.swo
 
 # Project specific
+data/analyzed/*.csv
+data/analyzed/*.json
+data/raw/*.csv
+data/raw/*.json
+*.log
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+.DS_Store
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Project specific
 data/*.csv 
