--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
-requests==2.31.0
-numpy==1.24.3
-pandas==2.0.3
-PyGithub==2.1.1
-python-dotenv>=0.19.0
-tqdm==4.66.1
+# Core dependencies
 openai>=1.0.0
-PyYAML>=6.0.1
-PyPDF2>=3.0.0 
+pyyaml>=6.0.1
+python-dotenv>=1.0.0
+tqdm>=4.66.1
+
+# Testing
+pytest>=7.4.0
+pytest-cov>=4.1.0
+
+# Type checking
+mypy>=1.5.1
+types-PyYAML>=6.0.12.12
+
+# Logging
+rich>=13.5.2
+
+# Data handling
+pandas>=2.0.3
+numpy>=1.24.3
+
+# GitHub API
+PyGithub>=2.1.1
+
+# Development tools
+black>=23.7.0
+isort>=5.12.0
+flake8>=6.1.0 
